# hightechplant-test

./: .dockerignore  .env.dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
test_task/: settings.py  urls.py
test_task/templates/: acc_active_email.html  base.html  index.html  password_reset_complete.html  reset_password.html  reset_password_confirm.html  reset_password_done.html  user_login.html
test_task/templates/CRUD/: create_update.html
test_task/templates/users/: user_detail.html  users.html
test_task/users/: apps.py  forms.py  models.py  token.py  urls.py  views.py
test_task/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
