[tool.poetry]
name = "hightechplant_test_task"
version = "0.1.0"
description = ""
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg-binary = "^3.1.8"
whitenoise = "^6.4.0"
django-bootstrap4 = "^23.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
